--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ unless you know exactly what you're doing! -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/rubberduck.png">
 
-    <title>duckPics</title>
+    <title>quackle</title>
   </head>
   <body>
     <noscript>
